--- a/teachers/Teaching experience.html
+++ b/teachers/Teaching experience.html
@@ -38,17 +38,17 @@
     <div id="footer">
         <div class="footer-menu">
             <li><a href="../index.html">Главная</a></li>
-            <li><a href="#">Учителя</a></li>
-            <li><a href="../page/courses.html">Курсы</a></li>
-            <li><a href="#">Новости</a></li>
-            <li><a href="../page/contact.html">Контакты</a></li>
-            <li><a href="#">О нас</a></li>
+            <li><a href="page/teachers.html">Учителя</a></li>
+            <li><a href="courses.html">Курсы</a></li>
+            <li><a href="page/news.html">Новости</a></li>
+            <li><a href="contact.html">Контакты</a></li>
+            <li><a href="page/about.html">О нас</a></li>
         </div>
         <div class="list1">
-            <li><a href="#">Социальная программа</a></li>
-            <li><a href="#">Отзывы</a></li>
-            <li><a href="#">Справочник студента</a></li>
-            <li><a href="#">Методическое пособие</a></li>
+            <li><a href="page/social_programm.html">Социальная программа</a></li>
+            <li><a href="page/1.html">Отзывы</a></li>
+            <li><a href="page/student.html">Справочник студента</a></li>
+            <li><a href="page/metodical_page.html">Методическое пособие</a></li>
         </div>
         <div class="media">
             <p>Социальные сети</p>
