--- a/teachers/Professional qualifications.html
+++ b/teachers/Professional qualifications.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eazy Language</title>
-    <link rel="stylesheet" href="../css/Professional qualifications.css">
+    <link rel="stylesheet" href="../css/professional qualifications.css">
 </head>
 <body>
     <div id="header">
