--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <ul>
                 <li><a href="index.html">Главная</a></li>
                 <li class="dropdown">
-                    <a href="#" class="dropbtn">Учителя</a>
+                    <a href="page/teachers.html" class="dropbtn">Учителя</a>
                     <div class="dropdown-content">
                         <a href="teachers/Professional qualifications.html">Профессиональные квалификации</a>
                         <a href="teachers/Methodological materials.html">Методические материалы</a>
@@ -38,7 +38,7 @@
                 <li><a href="page/news.html">Новости</a></li>
                 <li><a href="page/contact.html">Контакты</a></li>
                 <li class="dropdown">
-                    <a href="#" class="dropbtn">О нас</a>
+                    <a href="page/about.html" class="dropbtn">О нас</a>
                     <div class="dropdown-content">
                         <a href="about/team.html">Наш коллектив</a>
                         <a href="about/story.html">История</a>
@@ -47,7 +47,6 @@
                 </li>
             </ul>
         </div>
-
     </div>
     <div id="content">
         <div class="slogan">
@@ -134,7 +133,7 @@
             </div>
         </div>
     </div>
-    <script src="js/main.js"></script>
+    <script src="js/menu.js"></script>
 </body>
 
 </html>
