--- a/teachers/Methodological materials.html
+++ b/teachers/Methodological materials.html
@@ -29,9 +29,9 @@
                 <li class="dropdown">
                     <a href="../page/teachers.html" class="dropbtn">Учителя</a>
                     <div class="dropdown-content">
-                        <a href="teachers/Professional qualifications.html">Профессиональные квалификации</a>
-                        <a href="teachers/Methodological materials.html">Методические материалы</a>
-                        <a href="teachers/Teaching experience.html">Педагогический опыт</a>
+                        <a href="Professional qualifications.html">Профессиональные квалификации</a>
+                        <a href="Methodological materials.html">Методические материалы</a>
+                        <a href="Teaching experience.html">Педагогический опыт</a>
                     </div>
                 </li>
                 <li><a href="page/courses.html">Курсы</a></li>
