--- a/teachers/Methodological materials.html
+++ b/teachers/Methodological materials.html
@@ -40,13 +40,17 @@
                 <li class="dropdown">
                     <a href="../page/about.html" class="dropbtn">О нас</a>
                     <div class="dropdown-content">
-                        <a href="about/team.html">Наш коллектив</a>
-                        <a href="about/story.html">История</a>
-                        <a href="about/mission and values.html">Миссия и ценности</a>
+                        <a href="../about/team.html">Наш коллектив</a>
+                        <a href="../about/story.html">История</a>
+                        <a href="../about/mission and values.html">Миссия и ценности</a>
                     </div>
                 </li>
             </ul>
         </div>
+        <label class="switch">
+            <input type="checkbox" id="theme-toggle">
+            <span class="slider round"></span>
+        </label>
     </div>
     <div id="content">
         <h1>Методические материалы по изучению иностранных языков</h1>
@@ -174,6 +178,7 @@
         </div>
     </div>
     <script src="../js/menu.js"></script>
+    <script src="../js/theme.js"></script>
 </body>
 
 </html>
