--- a/teachers/Teaching experience.html
+++ b/teachers/Teaching experience.html
@@ -47,6 +47,10 @@
                 </li>
             </ul>
         </div>
+        <label class="switch">
+            <input type="checkbox" id="theme-toggle">
+            <span class="slider round"></span>
+        </label>
     </div>
     <div id="content">
         <h1>Педагогический опыт</h1>
@@ -106,6 +110,7 @@
         </div>
     </div>
     <script src="../js/menu.js"></script>
+    <script src="../js/theme.js"></script>
 </body>
 
 </html>
