--- a/about/mission and values.html
+++ b/about/mission and values.html
@@ -44,6 +44,10 @@
                 </div>
             </li>
         </div>
+        <label class="switch">
+            <input type="checkbox" id="theme-toggle">
+            <span class="slider round"></span>
+        </label>
     </div>
     <div id="content">
         <h1>Миссия и ценности</h1>
@@ -138,6 +142,7 @@
         </div>
     </div>
     <script src="../js/menu.js"></script>
+    <script src="../js/theme.js"></script>
 </body>
 
 </html>
