--- a/about/story.html
+++ b/about/story.html
@@ -45,6 +45,10 @@
                 </div>
             </li>
         </div>
+        <label class="switch">
+            <input type="checkbox" id="theme-toggle">
+            <span class="slider round"></span>
+        </label>
     </div>
     <div id="content">
         <h1>Семь Лет Совершенства: История Языковой Школы Eazy Language</h1>
@@ -109,6 +113,8 @@
             </div>
         </div>
     </div>
+    <script src="../js/menu.js"></script>
+    <script src="../js/theme.js"></script>
 </body>
 
 </html>
