--- a/about/team.html
+++ b/about/team.html
@@ -45,6 +45,10 @@
                 </div>
             </li>
         </div>
+        <label class="switch">
+            <input type="checkbox" id="theme-toggle">
+            <span class="slider round"></span>
+        </label>
     </div>
     <div id="content">
         <h1>Наш коллектив</h1>
@@ -161,6 +165,7 @@
     </div>
     <script src="../js/menu.js"></script>
     <script src="../js/team.js"></script>
+    <script src="../js/theme.js"></script>
 </body>
 
 </html>
