--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
                 </li>
             </ul>
         </div>
+        <label class="switch">
+            <input type="checkbox" id="theme-toggle">
+            <span class="slider round"></span>
+        </label>
     </div>
     <div id="content">
         <div class="slogan">
@@ -134,6 +138,7 @@
         </div>
     </div>
     <script src="js/menu.js"></script>
+    <script src="js/theme.js"></script>
 </body>
 
 </html>
