--- a/teachers/Professional qualifications.html
+++ b/teachers/Professional qualifications.html
@@ -47,6 +47,10 @@
                 </li>
             </ul>
         </div>
+        <label class="switch">
+            <input type="checkbox" id="theme-toggle">
+            <span class="slider round"></span>
+        </label>
     </div>
     </div>
     <div id="content">
@@ -108,6 +112,7 @@
         </div>
     </div>
     <script src="../js/menu.js"></script>
+    <script src="../js/theme.js"></script>
 </body>
 
 </html>
